feat: add capability user routes
